# hackathon2_phaseIII

./: .gitignore  VERCEL_DEPLOYMENT.md  cookies.txt  pyproject.toml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  router.py  todos.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 003_add_conversation_message_tables.py
backend/app/mcp/: __init__.py  server.py
backend/app/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/app/models/: __init__.py  conversation.py  message.py  todo.py  user.py
backend/app/repositories/: __init__.py  conversation.py  message.py  todo.py  user.py
backend/app/schemas/: chat.py  conversation.py  error.py  message.py  todo.py  user.py
backend/app/services/: agent.py  auth.py  chat.py  todo.py
backend/tests/: conftest.py
frontend/: next.config.ts
frontend/src/: middleware.ts  proxy.ts
specs/001-phase-i-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase-ii-fullstack-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-iii-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/cli/: __init__.py  handlers.py  menu.py  validators.py
src/models/: __init__.py  task.py
(+74 files in other folders)
