[project]
name = "todo-cli"
version = "1.0.0"
description = "Phase I Todo CLI Application - In-memory console todo manager"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.uv.workspace]
members = [
    "src",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
